--- a/todo.html
+++ b/todo.html
@@ -16,19 +16,24 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav mx-auto">
             <li class="nav-item active pr-5">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="#">todo-list<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="#">logout</a>
+                <a class="nav-link" href="./index.html">logout</a>
               </li>
           </ul>
         </div>
       </nav>
 
+      <div id="checklist" class="ml-5" onchange="missionup();">
+
+      </div>
+
 
     <script src="./bootstrap-4.6.1/jquery-3.6.0.slim.min.js"></script>
     <script src="./bootstrap-4.6.1/js/bootstrap.bundle.min.js"></script>
     <script src="./bootstrap-4.6.1/js/bootstrap.min.js"></script>
-    <script src="./bootstrap-4.6.1/js/todojs.js"></script>
+    <!-- <script src="./bootstrap-4.6.1/js/todojs.js"></script> -->
+    <script src="./bootstrap-4.6.1/js/api.js"></script>
 </body>
 </html>
