--- a/todo.html
+++ b/todo.html
@@ -25,7 +25,8 @@
         </div>
       </nav>
 
-      <div id="checklist" class="ml-5" onchange="missionup();">
+      <div id="checklist" class="ml-5">
+        
 
       </div>
 
